Refactor: Handle empty `extensions` map in `ProblemDetails` constructor